# CoCA-Model

./: 10_min_idle.roca  10_min_idle.roca.norm  BAK_build.sh  CMakeLists.txt  CSV_IMPLEMENTATION_SUMMARY.md  CSV_USAGE_GUIDE.md  Changes made for this version.txt  Makefile  README.md  balanced_idle_move.roca  build.sh  coca_config.yaml  debug_coca.cpp  feature_config_full.csv  full_stat_test.py  graph.py  just_norm_move.roca  just_norm_move.roca.norm  model.roca  model.roca.norm  model_3.roca  model_3.roca.norm  model_features.txt  newest_roca_model.pt  patch_train_roca.py  reverse_anom_test_results.csv  robot_data.csv  roca_scores.csv  sanity_numbers.py  sanity_stats.txt  score_roca.py  scores_test.csv  test.roca  test.roca.norm  test_config.txt  test_model.roca  test_results.csv  train_csv  train_roca.py  trained_model.coca  (+6 more)
RoCA-Model-v3-main/: training_config.txt  valid_features_auto.txt
RoCA-Model-v3-main/apps/: idle_poc.cpp  test_synthetic_filtered.cpp
RoCA-Model-v3-main/src/: roca_idle_specialized.hpp
RoCA-Model-v3-main/src/data/: window_maker.hpp
apps/: batch_analyzer_csv.cpp  coca_synthetic.cpp  coca_test.cpp  coca_train.cpp  csv_partitioner.cpp  idle_poc_filtered.cpp  navigation_WIP.cpp  roca_batch_eval.cpp  test_one_class.cpp  test_pca.cpp  train_csv_model.cpp  train_csv_model_multi.cpp  train_one_class.cpp
apps/old/: data_diagnostic.cpp  debug_values.cpp  deep_diagnostic.cpp  find_corruption.cpp  inspect_filtered_data.cpp  roca_diagnostic.cpp  roca_diagnostic_enhanced.cpp  roca_live_filtered.cpp  train_clean.cpp  train_filtered.cpp  train_one_class.cpp  train_simple_model.cpp  train_skip_nans.cpp  train_without_corrupt.cpp  train_without_power.cpp
models/: idle_one_leg_5.pt  roca_model.pt
results/: idle_test on anom.csv.csv
src/: coca_model.hpp  feature_filter.hpp  model_io_complete.hpp  roca_idle_specialized.hpp  roca_one_class.hpp  roca_one_class_impl.hpp
src/io/: binary_log.hpp  csv_reader.hpp
src/utils/: config_parser.hpp  model_io.hpp
tests/: one_anom_sit_LOCKED.csv  robot_data_sample.csv  test_full_pipeline.cpp  test_losses.cpp
